# CMakeList.txt : CMake project for Console Tetris, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Console Tetris")

# Add source to this project's executable.
add_executable (CMakeTarget "Console Tetris.cpp" "Console Tetris.h" "Tetris.cpp")
# TODO: Add tests and install targets if needed.
